add domi page placeholder

--- a/final.html
+++ b/final.html
@@ -36,7 +36,7 @@
                      Annual hackathon at Florida State.
                   </div>
                </div>
-               <div class='proj eight columns'>
+               <div data-link='domi.html' class='proj eight columns'>
                   <div class='overlay'></div>
                   <img id='domi' src='img/domi-graph.png' />
                   <div class='title'>domi</div>
