--- a/index.html
+++ b/index.html
@@ -1,229 +1,104 @@
 <html>
 <head>
    <link rel="stylesheet" type="text/css" href="css/skeleton.css" />
-   <link rel="stylesheet" type="text/css" href="css/landing.css" />
-   <link rel="stylesheet" type="text/css" href="css/main.css" />
+   <link rel="stylesheet" type="text/css" href="css/final.css" />
    <link rel="stylesheet" type="text/css" href="css/octicons/octicons.css" />
    <script src="js/modernizr.custom.js"></script>
    <script src="js/jquery-1.11.0.min.js"></script>
-   <script src='js/index.js'></script>
    <title>Matt O'Hagan</title>
    <meta name="viewport" content="width=device-width" />
 </head>
 <body>
-   <!-- landing page nav bar -->
-   <!--<div class='top'>
-      <div class='leftSide'>
-         <span class='dontshow'>matt o'hagan</span>
-         <div class="footer dontshow">
-            <a href="http://github.com/mattohagan">github</a>
-            <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">resume</a>
-         </div>
-         <div style='clear: both'></div>
-      </div>
-   </div>-->
-
-   <!-- second nav bar 
-   <div class='nav'>
-      <div class='left'>
-         matt o'hagan
-      </div>
-      <div class='right'>
-         <a href="http://github.com/mattohagan">github</a>
-         <a href="https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0">resume</a>
-      </div>
-   </div> -->
-
-   <div class='landing'>
-      <div class='centered'>
-         <!--<div class='before'><span id='phrase'>hey there!</span>  i'm matt.</div>-->
-         <div class='box-cont'>
-            <div class='box'>
-               <div class='top'></div>
-               <div class='right'></div>
-               <div class='bottom'></div>
-               <div class='left'></div>
-               <div id='infoScroll' class='container inside final'>
-                  <ul class='itemwrap'>
-                     <li class='current'><span><span id='phrasetwo'>hey there!</span> i'm matt.</span></li>
-                     <li><span>hackfsu director.</span></li>
-                     <li><span>technole member.</span></li>
-                     <li><span>domi intern.</span></li>
-                     <li><span>avid hacker.</span></li>
-                     <li><span>community builder.</span></li>
-                  </ul>
-               </div>
-            </div>
-            <div style='clear: both'></div>
-         </div>
-
-
-
-         <div class='container landingPort'>
-            <!--<div class='year'>2015 <!--<span class='mega-octicon octicon-calendar'></span></div-->
+   <div id='landing'>
+      <canvas id='effects'></canvas>
+      <div class='container'>
+         <div class='header'>
             <div class='row'>
-               <div class='proj four columns'>
+               <div class='big twelve columns'>hey! i'm matt.</div>
+               <div class='sub-title twelve columns'>hackfsu director, computer science student, and community builder.</div>
+            </div>
+            <div class='small-line'></div><span id='notifyText'>will open in a new tab</span>
+            <div style='clear: both'></div>
+            <ul class='alone-nav'>
+               <li class='current'>portfolio</li>
+               <li><a target='_blank' href='http://github.com/mattohagan'>github</a></li>
+               <li><a target='_blank' href='https://www.dropbox.com/s/8mt66kqr4t27tk4/Resume.pdf?dl=0'>resume</a></li>
+            </ul>
+         </div>
+         <div class='portfolio'>
+            <div class='row'>
+               <div data-link='hackfsu.html' class='proj four columns'>
+                  <div class='overlay'></div>
+                  <img id='hackfsu' src='img/hackfsuOpening.jpg' />
                   <div class='title'>hackfsu</div>
                   <div class='where'>mhacks</div>
                   <div class='desc'>
                      Annual hackathon at Florida State.
                   </div>
                </div>
-               <div class='proj four columns'>
+               <div data-link='domi.html' class='proj eight columns'>
+                  <div class='overlay'></div>
+                  <img id='domi' src='img/domi-graph.png' />
+                  <div class='title'>domi</div>
+                  <div class='where'>internship</div>
+                  <div class='desc'>
+                     Room reservation system & dashboard.
+                  </div>
+               </div>
+            </div>
+            <div class='row'>
+               <div data-link='technole' class='proj four columns'>
+                  <div class='overlay'></div>
+                  <img id='technole' src='img/technole.png' />
                   <div class='title'>technole</div>
                   <div class='where'>vthacks</div>
                   <div class='desc'>
                      Student tech organization.
                   </div>
                </div>
-               <div class='proj four columns'>
+               <div data-link='runaway' class='proj four columns'>
+                  <div class='overlay'></div>
+                  <img id='kanye' src='img/kanye1.png' />
                   <div class='title'>runaway</div>
                   <div class='where'>hacknc</div>
                   <div class='desc'>
                      Kanye themed roadtrip generator.
                   </div>
                </div>
+               <div class='proj four columns'>
+                  <div class='overlay'></div>
+                  <img id='hippo' src='img/hippo.jpg' />
+                  <div class='title'>hippo</div>
+                  <div class='where'>mhacks</div>
+                  <div class='desc'>
+                     Desktop hardware gadget.
+                  </div>
+               </div>
             </div>
             <div class='row'>
                <div class='proj eight columns'>
+                  <div class='overlay'></div>
+                  <img id='jot' src='img/jotScreen3.png' />
                   <div class='title'>jot</div>
                   <div class='where'>side project</div>
                   <div class='desc'>
                      Chrome extension with around 10,000 users.
                   </div>
                </div>
-               <div class='proj four columns'>
-                  <div class='title'>hippo</div>
-                  <div class='where'>mhacks</div>
-                  <div class='desc'>
-                     Desktop hardware gadget.
-                  </div>
-               </div>
-            </div>
-            <div class='row'>
-               <div class='proj four columns'>
+               <div data-link='oldSite/' class='proj four columns'>
+                  <div class='overlay'></div>
+                  <img id='previous-site' src='img/previous-site.png' />
                   <div class='title'>this site</div>
                   <div class='where'>side project</div>
                   <div class='desc'>
                      The previous version.
                   </div>
                </div>
-               <div class='proj eight columns'>
-                  <div class='title'>domi</div>
-                  <div class='where'>internship</div>
-                  <div class='desc'>
-                     Room reservation system & dashboard.
-                  </div>
-               </div>
-            </div>
-
-            
-         </div>
-
-
-
-
-
-         <!--<div class='beforeList'>
-            <div><a href='https://www.youtube.com/watch?v=VtgGd9kW550'>HackFSU</a></div>
-            <div id='second'><a href='http://technole.org/'>Technole</a></div>
-            <div id='third'><a href='http://www.domistation.com/'>Domi</a></div>
-            <div id='fourth'><a href='hello'>Hackathons</a></div>
-         </div>
-         <!--<div class='tooltip'>
-            scroll down for my portfolio!
-         </div>-->
-      </div>
-      <!--<div id='arrow' class='arrow'>
-         <div class='inner'>
-            portfolio <br/>
-            <span class='mega-octicon octicon-chevron-down'></span>
-         </div>
-      </div> -->
-   </div>
-
-   <div id='port' class='port'>
-      <div class=''>
-         <div class='centered'>
-            <div class='header'>
-               <a href='#portfolio'></a>
-            </div>
-            <div class='portfolio'>
-               <div class='year'>2015 <!--<span class='mega-octicon octicon-calendar'></span>--></div>
-               <div class='proj'>
-                  <div class='title'>jot</div>
-                  <div class='where'>side project</div>
-                  <div class='desc'>
-                     Chrome extension. Currently around 10,000 users.
-                  </div>
-               </div>
-               <div class='proj'>
-                  <div class='title'>domi</div>
-                  <div class='where'>internship</div>
-                  <div class='desc'>
-                     Room reservation system & dashboard.
-                  </div>
-               </div>
-               <div class='proj'>
-                  <div class='title'>hippo</div>
-                  <div class='where'>mhacks</div>
-                  <div class='desc'>
-                     Desktop hardware gadget.
-                  </div>
-               </div>
-
-
-
-               <div class='year'>2014 <!--<span class='mega-octicon octicon-calendar'></span>--></div>
-               <div class='proj'>
-                  <div class='title'>runaway</div>
-                  <div class='where'>hacknc</div>
-                  <div class='desc'>
-                     Kanye themed random trip generator.
-                  </div>
-               </div>
-               <div class='proj'>
-                  <div class='title'>myo playground</div>
-                  <div class='where'>mhacks</div>
-                  <div class='desc'>
-                     Result of a 12 hour pivot at MHacks IV.
-                  </div>
-               </div>
-               <div class='proj'>
-                  <div class='title'>pioneer</div>
-                  <div class='where'>vthacks</div>
-                  <div class='desc'>
-                     Web app to get news around the world.
-                  </div>
-               </div>
-               <div class='proj'>
-                  <div class='title'>this site</div>
-                  <div class='where'>side project</div>
-                  <div class='desc'>
-                     Previous version of my personal site.
-                  </div>
-               </div>
-
             </div>
          </div>
       </div>
    </div>
-   
 
-
-
-<!--
-   http://coolors.co/app/fafafa-db5461-8aa29e-f5cb5c-686963
--->
-
-   <script>
-     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-     ga('create', 'UA-52705764-1', 'auto');
-     ga('send', 'pageview');
-  </script>
-  </body>
+   <script src='js/final.js'></script>
+</body>
 </html>
