add back button to hackfsu page

--- a/hackfsu.html
+++ b/hackfsu.html
@@ -18,7 +18,7 @@
          <div class='container'>
             <div class='header'>
                <div class='row'>
-                  <div class='big'>matt o'hagan</div>
+                  <div id='back' class='nav'><span class="mega-octicon octicon-chevron-left"></span> home</div>
                   <!-- <div class='u-pull-right six columns'>
                      <ul class='alone-nav'>
                         
