--- a/hackfsu.html
+++ b/hackfsu.html
@@ -18,7 +18,7 @@
          <div class='container'>
             <div class='header'>
                <div class='row'>
-                  <div id='back' class='nav'><span class="mega-octicon octicon-chevron-left"></span> home</div>
+                  <div id='back' class='nav'><span class="mega-octicon octicon-chevron-left"></span> <span id='txt'>home</span></div>
                   <!-- <div class='u-pull-right six columns'>
                      <ul class='alone-nav'>
                         
@@ -55,8 +55,10 @@
       <div class='container'>
          Small batch Banksy selfies, authentic brunch PBR&B wayfarers. Bespoke +1 you probably haven't heard of them PBR aesthetic pickled. Roof party deep v migas organic twee. Roof party skateboard readymade fingerstache meggings, Tumblr vegan cardigan 3 wolf moon distillery wayfarers tattooed chambray. IPhone VHS farm-to-table Echo Park keffiyeh. Keffiyeh jean shorts chia, actually meditation messenger bag PBR&B next level art party polaroid ugh. Deep v kale chips direct trade, mlkshk banjo fanny pack kitsch single-origin coffee try-hard cornhole church-key.
 
+         <br />
+         <br />
 
-Ennui normcore Etsy, fap fanny pack pork belly Marfa flexitarian hashtag raw denim. Cold-pressed American Apparel fingerstache, ugh Brooklyn quinoa Portland plaid iPhone paleo locavore retro kitsch McSweeney's. Fashion axe raw denim leggings, Thundercats paleo ugh aesthetic flexitarian cray plaid Pinterest. Odd Future swag pop-up bespoke, lumbersexual crucifix ennui selvage Pinterest Carles gluten-free asymmetrical. Trust fund meh distillery you probably haven't heard of them, art party Marfa fap Brooklyn synth Echo Park. Migas kale chips kitsch, paleo Carles mixtape Bushwick meditation skateboard iPhone Kickstarter. Tofu vinyl distillery cliche Banksy you probably haven't heard of them +1, kogi PBR pour-over irony selfies meh.
+         Ennui normcore Etsy, fap fanny pack pork belly Marfa flexitarian hashtag raw denim. Cold-pressed American Apparel fingerstache, ugh Brooklyn quinoa Portland plaid iPhone paleo locavore retro kitsch McSweeney's. Fashion axe raw denim leggings, Thundercats paleo ugh aesthetic flexitarian cray plaid Pinterest. Odd Future swag pop-up bespoke, lumbersexual crucifix ennui selvage Pinterest Carles gluten-free asymmetrical. Trust fund meh distillery you probably haven't heard of them, art party Marfa fap Brooklyn synth Echo Park. Migas kale chips kitsch, paleo Carles mixtape Bushwick meditation skateboard iPhone Kickstarter. Tofu vinyl distillery cliche Banksy you probably haven't heard of them +1, kogi PBR pour-over irony selfies meh.
       </div>
    </div>
 
