--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-it's lit.
+<html>
+<head>
+   <link rel="stylesheet" type="text/css" href="css/skeleton.css" />
+   <link rel="stylesheet" type="text/css" href="css/main.css" />
+   <script src="js/jquery-1.11.0.min.js"></script>
+   <title>Matt O'Hagan</title>
+   <meta name="viewport" content="width=device-width" />
+</head>
+<body>
+	<div class='container center'>
+		<div class='row'>
+			<div class='title twelve columns'>
+				it's lit.
+			</div>
+		</div>
+		<div class='row'>
+			<div class='subtitle twelve columns'>
+				<!-- Begin MailChimp Signup Form -->
+			<div id="mc_embed_signup">
+			<form action="http://itslit.us11.list-manage.com/subscribe/post?u=ef724ebe090f86642bdbf51ab&amp;id=40055fad19" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+			   <div id="mc_embed_signup_scroll">
+			    <label for="mce-EMAIL"></label>
+			    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+			   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			   <div style="position: absolute; left: -5000px;"><input type="text" name="b_ef724ebe090f86642bdbf51ab_40055fad19" tabindex="-1" value=""></div>
+			   <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn"></div>
+			   </div>
+			</form>
+			</div>
+
+			<!--End mc_embed_signup-->
+			</div>
+		</div>
+	</div>
+</body>
+</html>
