--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <head>
    <link rel="stylesheet" type="text/css" href="css/skeleton.css" />
    <link rel="stylesheet" type="text/css" href="css/main.css" />
+   <link rel='icon' href='favicon.png' />
    <script src="js/jquery-1.11.0.min.js"></script>
    <title>Matt O'Hagan</title>
    <meta name="viewport" content="width=device-width" />
 </head>
 <body>
+	<div class='overlay'></div>
 	<div class='container center'>
 		<div class='row'>
 			<div class='title twelve columns'>
