--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Hone.work</title>
-    <meta name="keywords" content="free html template, bootstrap, ui kit, sass" />
+    <title>Hone</title>
+    <meta property="og:title" content="Hone.work" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="img/hone_og_ad.jpg" />
+
+
+    <meta name="keywords" content="insights, hone, " />
     <link rel="stylesheet" href="css/landio.css">
     <link rel="stylesheet" href="css/colors.css">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
@@ -75,7 +80,7 @@
     <section id="purpose" class="section-intro bg-faded text-xs-center">
       <div class="container">
         <h3 class="wp wp-1">Our Vision</h3>
-        <h4 class="lead wp wp-2">Many small vusinesses care deeply about bustomer satisfaction. We aim to empower them to create a workforce full of potential. With Hone, we are lowering employee turnover rates through business specific insights to help find the most culturally fit applicant.
+        <h4 class="lead wp wp-2">Many small businesses care deeply about customer satisfaction. We aim to empower them to create a workforce full of potential. With Hone, we are lowering employee turnover rates through business specific insights to help find the most culturally fit applicant.
           
         <br><br> If you share our passion, <a class="nav-link" href="https://twitter.com/hone_work"><span class="icon-twitter"></span><b> let us know!</b></a>
          
