change og image

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Hone</title>
     <meta property="og:title" content="Hone.work" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="img/hone_og_ad.jpg" />
+    <meta property="og:image" content="img/hone_og_take_two.jpg" />
+    <meta property="og:description" 
+  content="We recommend the most qualified applicants to lower your turnover rate." />
 
 
     <meta name="keywords" content="insights, hone, " />
