change og title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Hone</title>
-    <meta property="og:title" content="Hone.work" />
+    <meta property="og:title" content="Hone" />
     <meta property="og:image" content="img/hone_og_take_two.jpg" />
     <meta property="og:description" 
   content="We recommend the most qualified applicants to lower your turnover rate." />
